name:
  fast-ecrecover
version:
  0.1
synopsis:
  Fast implementation of the EC Recover algorithm
copyright:
  2016, Blockapps
build-type:
  Simple
cabal-version:
  >=1.10

source-repository head
  type:
    git
  location:
    https://github.com/blockapps/fast-ecrecover

library
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  exposed-modules:
    Blockchain.FastECRecover
  build-depends:
    -- 
    haskoin,
    ethereum-encryption,
    blockapps-util,
    blockapps-ecrecover == 0.4.*,
    -- 
    binary < 0.9,
    rerebase < 2

benchmark benchmark
  type: 
    exitcode-stdio-1.0
  hs-source-dirs:
    benchmark
  main-is:
    Main.hs
  ghc-options:
    -O2
    -threaded
    "-with-rtsopts=-N"
  ghc-prof-options:
    -O2
    -threaded
    -fprof-auto
    "-with-rtsopts=-N -p -s -h -i0.1"
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language:
    Haskell2010
  ghc-options:
    -O2
    -threaded
    "-with-rtsopts=-N"
  ghc-prof-options:
    -O2
    -threaded
    -fprof-auto
    "-with-rtsopts=-N -p -s -h -i0.1"
  build-depends:
    -- 
    fast-ecrecover,
    haskoin,
    ethereum-encryption,
    blockapps-util,
    -- 
    binary < 0.9,
    criterion,
    -- basics:
    binary,
    rerebase < 2

