name: merkle-patricia-db
version: 0.0.1
cabal-version: >=1.10
build-type: Simple
author: Jamshid
license-file:  LICENSE
maintainer:    jamshidnh@gmail.com
synopsis: A modified Merkle Patricia DB
category:      Data Structures
license: Apache-2.0
description:  
    The modified Merkle Patricia DB described in the Ethereum Yellowpaper

source-repository head
  type:     git
  location: https://github.com/jamshidh/ethereum-merkle-patricia-db

source-repository this
  type:     git
  location: https://github.com/jamshidh/ethereum-merkle-patricia-db
  branch:   master
  tag:      v0.0.1
 
library
    default-language: Haskell2010
    build-depends: base >= 4 && < 5
                 , aeson
                 , base16-bytestring
                 , binary
                 , bytestring
                 , cryptohash
                 , data-default
                 , ethereum-rlp
                 , blockapps-util
                 , leveldb-haskell
                 , nibblestring
                 , resourcet
                 , transformers
                 , ansi-wl-pprint
                 , containers
                 , mtl
    exposed-modules: Blockchain.Database.MerklePatricia
                   , Blockchain.Database.MerklePatriciaMem
                   , Blockchain.Database.KeyVal
                   , Blockchain.Database.MerklePatricia.Internal
                   , Blockchain.Database.MerklePatricia.InternalMem
                   , Blockchain.Database.MerklePatricia.Diff
                   , Blockchain.Database.MerklePatricia.Map
                   , Blockchain.Database.MerklePatricia.NodeData
    other-modules: Blockchain.Database.MerklePatricia.MPDB
                 , Blockchain.Database.MerklePatricia.StateRoot
    ghc-options: -Wall
    buildable: True
    hs-source-dirs: src


Test-Suite test-merkle-patricia-db
    default-language: Haskell2010
    hs-source-dirs: test, src
    type:           exitcode-stdio-1.0
    main-is:        Main.hs
    build-depends:  base >=4 && < 5
                  , data-default
                  , leveldb-haskell
                  , resourcet
                  , bytestring
                  , base16-bytestring
                  , transformers
                  , binary
                  , ethereum-rlp
                  , cryptohash
                  , nibblestring
                  , ansi-wl-pprint
                  , test-framework
                  , test-framework-hunit
                  , HUnit
                  , containers
                  , blockapps-util
                  , aeson
                  , mtl
    other-modules:  Blockchain.Database.MerklePatricia
                  , Blockchain.Database.MerklePatricia.Internal
                  , Blockchain.Database.MerklePatricia.InternalMem
                  , Blockchain.Database.MerklePatricia.MPDB
                  , Blockchain.Database.MerklePatricia.NodeData
                  , Blockchain.Database.MerklePatricia.StateRoot
                  , Blockchain.Database.MerklePatriciaMem

