
name:                miner-ethash
version:             0.1.0.0
license:             Apache-2.0
license-file:        LICENSE
category:            System
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Blockchain.Strato.Mining.Ethash.Hashimoto
                     , Blockchain.Strato.Mining.Ethash.Cache
                     , Blockchain.Strato.Mining.Ethash.Constants
                     , Blockchain.Strato.Mining.Ethash.Dataset
                     , Blockchain.Strato.Mining.Ethash.TimeIt
  other-modules:       Blockchain.Strato.Mining.Ethash.Util
  build-depends:       base,
                       arithmoi,
                       array,
                       binary,
                       bytestring,
                       cryptohash,
                       time
  ghc-options:         -Wall -O2
  hs-source-dirs:      src
  default-language:    Haskell2010


executable miner-ethash
  main-is:             Main.hs
  build-depends:       base,
                       arithmoi,
                       array,
                       binary,
                       bytestring,
                       cryptohash,
                       mmap,
                       miner-ethash,
                       time
  ghc-options:         -Wall -O2
  hs-source-dirs:      exec_src
  default-language:    Haskell2010

executable mkDataset
  main-is:             mkDataset.hs
  build-depends:       base,
                       arithmoi,
                       array,
                       binary,
                       bytestring,
                       cryptohash,
                       miner-ethash,
                       time
  ghc-options:         -Wall -O2
  hs-source-dirs:      exec_src
  default-language:    Haskell2010