name: blockapps-solidity
version: 0.1.0.0
synopsis: Solidity datatypes
description: Solidity datatypes
homepage: https://github.com/blockapps/blockapps-haskell/blockapps-solidity
license: BSD3
license-file: LICENSE
author: Eitan Chatav
maintainer: eitan@blockapps.net
copyright: 2016 BlockApps
category: Web
build-type: Simple
cabal-version: >=1.10

library
  hs-source-dirs: src
  exposed-modules:
    BlockApps.Contract
    BlockApps.Solidity
    BlockApps.Solidity.Int
    BlockApps.Solidity.Storage
    BlockApps.Solidity.Struct
    BlockApps.Solidity.Type
    BlockApps.Solidity.TypeDefs
    BlockApps.Solidity.Value
    BlockApps.SolidityVarReader
    BlockApps.Storage
  default-language: Haskell2010
  ghc-options: -Wall -Werror
  build-depends: base
    , blockapps-ethereum
    , aeson
    , aeson-casing
    , base16-bytestring
    , bimap
    , binary
    , bytestring
    , containers
    , generic-random
    , http-api-data
    , largeint
    , largeword
    , logging-effect
    , memory
    , QuickCheck
    , quickcheck-instances
    , text

test-suite blockapps-solidity-test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  ghc-options: -Wall -Werror
  main-is: Spec.hs
  other-modules:
    BlockApps.SoliditySpec
  build-depends: base >=4 && < 5
    , blockapps-solidity
    , hspec

source-repository head
  type: git
  location: https://github.com/blockapps/blockapps-haskell/blockapps-solidity
