name: blockapps-solidity
version: 0.1.0.0
synopsis: Solidity datatypes
description: Solidity datatypes
homepage: https://github.com/blockapps/blockapps-haskell/blockapps-solidity
license: BSD3
license-file: LICENSE
author: Eitan Chatav
maintainer: eitan@blockapps.net
copyright: 2016 BlockApps
category: Web
build-type: Simple
cabal-version: >=1.10

library
  hs-source-dirs: src
  exposed-modules:
                  BlockApps.Solidity.ArgValue
                  BlockApps.Solidity.Contract
                  BlockApps.Solidity.Int
                  BlockApps.Solidity.Parse.Parser
                  BlockApps.Solidity.Parse.Selector
                  BlockApps.Solidity.SolidityValue
                  BlockApps.Solidity.Storage
                  BlockApps.Solidity.Struct
                  BlockApps.Solidity.Type
                  BlockApps.Solidity.TypeDefs
                  BlockApps.Solidity.Value
                  BlockApps.Solidity.Xabi
                  BlockApps.Solidity.Xabi.Def
                  BlockApps.Solidity.Xabi.Type
                  BlockApps.SolidityVarReader
                  BlockApps.Storage
                  BlockApps.XAbiConverter
  other-modules: BlockApps.Solidity.Parse.Declarations
                 BlockApps.Solidity.Parse.Expression
                 BlockApps.Solidity.Parse.File
                 BlockApps.Solidity.Parse.Lexer
                 BlockApps.Solidity.Parse.ParserTypes
                 BlockApps.Solidity.Parse.Types
  default-language: Haskell2010
  ghc-options: -Wall -Werror
  build-depends: base
               , blockapps-ethereum
               , aeson
               , aeson-casing
               , base16-bytestring
               , bimap
               , binary
               , bytestring
               , containers
               , cryptonite
               , generic-random
               , http-api-data
               , largeint
               , largeword
               , lens
               , logging-effect
               , memory
               , parsec
               , QuickCheck
               , quickcheck-instances
               , servant
               , servant-docs
               , swagger2
               , text
               , unordered-containers
               , vector

test-suite blockapps-solidity-test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  ghc-options: -Wall -Werror
  main-is: Spec.hs
  other-modules:
    BlockApps.SoliditySpec
    BlockApps.Solidity.StorageSpec
    BlockApps.Solidity.Parse.SelectorSpec
    BlockApps.XAbiConverterSpec
  build-depends: base >=4 && < 5
               , aeson
               , base16-bytestring
               , blockapps-ethereum
               , blockapps-solidity
               , bytestring
               , containers
               , hspec
               , raw-strings-qq
               , text

source-repository head
  type: git
  location: https://github.com/blockapps/blockapps-haskell/blockapps-solidity
