name:                strato-conf
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/name/project
license:             Apache-2.0
license-file:        LICENSE
author:              Jamshid
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Blockchain.EthConf
                       Blockchain.PeerUrls
                       Blockchain.KafkaTopics
                       Blockchain.APIFiles
                       Blockchain.PrivateKeyConf
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , directory
                     , filepath
                     , network
                     , yaml
                     , postgresql-simple
                     , containers
                     , milena
                     , file-embed
                     , crypto-random, crypto-pubkey-types, crypto-pubkey, random
                     , blockapps-util
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/blockapps/ethereum-conf
