name:                strato-conf
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/name/project
license:             Apache-2.0
license-file:        LICENSE
author:              Jamshid
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Blockchain.CoreFlags
                       Blockchain.EthConf
                       Blockchain.PeerUrls
                       Blockchain.KafkaTopics
                       Blockchain.APIFiles
                       Blockchain.PrivateKeyConf
                       Blockchain.StatsConf
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , directory
                     , filepath
                     , hflags
                     , network
                     , hostname
                     , yaml
                     , postgresql-simple
                     , containers
                     , blockapps-milena
                     , blockapps-util
                     , ethereum-encryption
                     , file-embed
                     , crypto-random
                     , crypto-pubkey-types
                     , crypto-pubkey
                     , random
                     , blockapps-util
                     , mtl
                     , transformers
                     , hedis
                     , time
                     , statsdi
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/blockapps/ethereum-conf
