name:                strato-index
version:             0.1.0.0
description:         Please see README.md
homepage:            http://github.com/githubuser/strato-index#readme
author:              Jamshid
copyright:           2016 Blockapps
build-type:          Simple
cabal-version:       >=1.10

executable strato-index
  default-language: Haskell98
  hs-source-dirs:      exec_src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends: base
               , blockapps-util
               , hflags
               , monad-logger
               , strato-index
  

library
  hs-source-dirs: src
  default-language: Haskell98
  build-depends:       base
                     , blockapps-data
                     , blockapps-util
                     , bytestring
                     , directory
                     , ethereum-rlp
                     , fast-logger
                     , filepath
                     , hflags
                     , lens
                     , milena
                     , monad-logger
                     , mtl
                     , persistent-postgresql
                     , process
                     , resourcet
                     , stm
                     , text
                     , transformers
                     , persistent
                     , containers
                     , strato-conf
  exposed-modules: Executable.StratoIndex
                   Blockchain.IOptions
  other-modules: Blockchain.IContext
                 Blockchain.SemiPermanent
  
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/blockapps/strato-index
