name:        strato-index
author:      Jamshid
copyright:   2016 Blockapps
description: Please see README.md
version:     0.1.0.0
homepage:    http://github.com/githubuser/strato-index#readme

build-type:    Simple
cabal-version: >=1.10

executable strato-api-indexer
  default-language: Haskell2010
  main-is: ApiIndexerMain.hs
  hs-source-dirs: exec_src
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends: base
               , blockapps-util
               , hflags
               , monad-logger
               , strato-index

library
  hs-source-dirs: src
  default-language: Haskell2010
  build-depends:  base
               , blockapps-data
               , blockapps-util
               , bytestring
               , directory
               , ethereum-rlp
               , fast-logger
               , filepath
               , hflags
               , lens
               , blockapps-milena
               , monad-logger
               , mtl
               , persistent-postgresql
               , process
               , resourcet
               , stm
               , text
               , transformers
               , persistent
               , containers
               , strato-conf
               , strato-sequencer
               , hedis
               , strato-redis-blockdb
  exposed-modules: Blockchain.Strato.Indexer.ApiIndexer
                 , Blockchain.Strato.Indexer.IContext
