name: strato-init
version: 0.0.1
cabal-version: >=1.10
build-type: Simple
author: Jamshid
license-file:  LICENSE
maintainer:    jamshidnh@gmail.com
synopsis: A tool to setup the DBs for a Strato instance
category:      Data Structures
license: Apache-2.0
description: A tool to setup the DBs for a Strato instance

source-repository this
  type:     git
  location: https://github.com/blockapps/strato-setup
  branch:   master
  tag:      v0.0.1

executable strato-setup
    default-language: Haskell98
    ghc-options: -Wall -O2 -threaded
    build-depends:
                   base >= 4 && < 5
                 , aeson
                 , base16-bytestring
                 , blockapps-data
                 , blockapps-util
                 , strato-sequencer
                 , strato-index
                 , bytestring
                 , containers
                 , directory
                 , entropy
                 , ethereum-discovery
                 , file-embed
                 , filepath
                 , hedis
                 , hflags
                 , leveldb-haskell
                 , merkle-patricia-db
                 , blockapps-milena
                 , monad-logger
                 , persistent-postgresql
                 , resourcet
                 , strato-conf
                 , strato-redis-blockdb
                 , text
                 , time
                 , transformers
                 , yaml
                 , strato-statediff
                 , split
    other-modules: Blockchain.BackupBlocks
                   Blockchain.BackupMP
                   Blockchain.Data.GenesisBlock
                   Blockchain.Data.GenesisInfo
                   Blockchain.Setup
                   Paths_strato_init
    buildable: True
    main-is: Main.hs
    hs-source-dirs: src

executable strato-backup
    default-language: Haskell98
    ghc-options: -Wall -O2 -threaded
    build-depends: base >= 4 && < 5
                 , base16-bytestring
                 , binary
                 , blockapps-data
                 , blockapps-util
                 , bytestring
                 , ethereum-rlp
                 , leveldb-haskell
                 , merkle-patricia-db
                 , monad-control
                 , monad-logger
                 , persistent-postgresql
                 , strato-conf
                 , transformers
    buildable: True
    main-is: Backup.hs
    hs-source-dirs: src

executable strato-block-backup
    default-language: Haskell98
    ghc-options: -Wall -O2 -threaded
    build-depends: base >= 4 && < 5
                 , base16-bytestring
                 , blockapps-data
                 , bytestring
                 , blockapps-milena
                 , strato-conf
    buildable: True
    main-is: BlockBackup.hs
    hs-source-dirs: src


executable genesis-setup
    default-language: Haskell98
    ghc-options: -Wall -O2 -threaded
    build-depends:
                   base >= 4 && < 5
                 , aeson
                 , base16-bytestring
                 , binary
                 , blockapps-data
                 , blockapps-util
                 , bytestring
                 , directory
                 , entropy
                 , blockapps-haskoin
                 , hflags
                 , merkle-patricia-db
                 , time
    other-modules: Blockchain.Data.GenesisInfo
                   Blockchain.GenesisBlockSetup
    buildable: True
    main-is: GenesisSetup.hs
    hs-source-dirs: src

executable strato-ez-restore
    main-is: RestoreTool.hs
    hs-source-dirs: src
    default-language: Haskell2010
    buildable: True
    ghc-options: -Wall -O2 -threaded
    other-modules: Blockchain.BackupBlocks
    build-depends: base
                 , blockapps-data
                 , persistent-postgresql
                 , bytestring
                 , base16-bytestring
                 , transformers
                 , monad-logger
                 , strato-conf
                 , blockapps-milena
                 , resourcet
                 , monad-control

library
    hs-source-dirs: src
    exposed-modules: Blockchain.Generation
    default-language: Haskell2010
    buildable: True
    ghc-options: -Wall -O2 -threaded
    build-depends: base
                 , aeson
                 , bytestring
                 , base16-bytestring
                 , strato-model

executable generate-genesis
    main-is: GenerateGenesis.hs
    hs-source-dirs: src
    default-language: Haskell2010
    buildable: True
    ghc-options: -Wall -O2 -threaded
    build-depends: base
                 , aeson
                 , aeson-extra
                 , bytestring
                 , hflags
                 , strato-init
                 , strato-model

test-suite strato-init-test
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: GenerationSpec.hs
    build-depends: aeson
                 , aeson-diff
                 , base
                 , base16-bytestring
                 , blockapps-data
                 , bytestring
                 , hspec
                 , strato-init
    ghc-options: -Wall
    default-language: Haskell2010
