name:                strato-model
version:             0.1.0.0
author:              BlockApps
maintainer:          blockapps
build-type:          Simple
cabal-version:       >=1.10
license:             Apache-2.0

library
  exposed-modules:      Blockchain.Strato.Model.Class
                      , Blockchain.Strato.Model.ExtendedWord
                      , Blockchain.Strato.Model.SHA
                      , Blockchain.Strato.Model.Address
                      , Blockchain.Strato.Model.Code
  other-modules:        Blockchain.Strato.Model.Util
  build-depends:        base
                      , base16-bytestring
                      , ethereum-rlp
                      , binary
                      , bytestring
                      , nibblestring
                      , cryptohash
                      , haskoin
                      , time
  hs-source-dirs:        src
  default-language:     Haskell2010
  default-extensions:   MultiParamTypeClasses
                      , FlexibleContexts
                      , FlexibleInstances
                      , GeneralizedNewtypeDeriving
                      , GADTs
                      , LambdaCase
                      , RecordWildCards
                      , FunctionalDependencies
  ghc-options:        -Wall -Werror