name:                strato-model
version:             0.1.0.0
author:              BlockApps
maintainer:          blockapps
build-type:          Simple
cabal-version:       >=1.10
license:             Apache-2.0

library
  exposed-modules:      Blockchain.Strato.Model.Class
                      , Blockchain.Strato.Model.ExtendedWord
                      , Blockchain.Strato.Model.SHA
                      , Blockchain.Strato.Model.Address
                      , Blockchain.Strato.Model.Code
                      , Blockchain.Strato.Model.Query
                      , Blockchain.Strato.Model.Util 
                      , Blockchain.Strato.Model.BlockchainClass
  other-modules:
  build-depends:        base
                      , base16-bytestring
                      , ethereum-rlp
                      , binary
                      , bytestring
                      , nibblestring
                      , cryptohash
                      , blockapps-haskoin
                      , time
  hs-source-dirs:       src
  default-language:     Haskell2010
  default-extensions:   MultiParamTypeClasses
                      , FlexibleContexts
                      , FlexibleInstances
                      , GeneralizedNewtypeDeriving
                      , GADTs
                      , LambdaCase
                      , RecordWildCards
                      , FunctionalDependencies
  ghc-options:        -Wall -Werror -fno-warn-warnings-deprecations

test-suite strato-model-test
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: Spec.hs
    other-modules:
       Blockchain.Strato.Model.BlockchainClassSpec,
       Blockchain.Strato.Model.TransactionModel,
       Blockchain.Strato.Model.BlockHeaderModel,
       Blockchain.Strato.Model.BlockchainModel,
       Blockchain.Strato.Model.BlockModel,
       Blockchain.Strato.Model.Constants


    build-depends:
       base,
       hspec,
       strato-model,
       containers,
       bytestring,
       time,
       ethereum-rlp,
       blockapps-haskoin,
       ethereum-encryption,
       fast-ecrecover,
       deepseq,
       clock,
       base16-bytestring

    -- We use -O0 here, since GHC takes *very* long to compile so many constants
    ghc-options: -O0 -Wall -rtsopts -fno-warn-unused-do-bind
    default-language: Haskell2010
